--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -20,7 +20,9 @@ jobs:
       with:
         ghc-version: '9.2.7'
         cabal-version: '3.0'
-        
+    - name: Upgrade ghcup
+      run: ghcup upgrade
+
     - name: Cache
       uses: actions/cache@v3
       env:
