--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -13,35 +13,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Upgrade ghcup
-      run: ghcup upgrade
+      # Обновляем ghcup до последней версии, чтобы иметь актуальный список версий GHC
+      - name: Upgrade ghcup
+        run: ghcup upgrade
 
-    - uses: actions/setup-haskell@v1
-      with:
-        ghc-version: '9.2.8'  # Update to a valid GHC version
-        cabal-version: '3.0'
+      # Используем поддерживаемую версию GHC (в данном случае 9.2.7)
+      - uses: actions/setup-haskell@v1
+        with:
+          ghc-version: '9.2.7'
+          cabal-version: '3.0'
 
-    - name: Cache
-      uses: actions/cache@v3
-      env:
-        cache-name: cache-cabal
-      with:
-        path: ~/.cabal
-        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
-        restore-keys: |
-          ${{ runner.os }}-build-${{ env.cache-name }}-
-          ${{ runner.os }}-build-
-          ${{ runner.os }}-
+      - name: Cache
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-cabal
+        with:
+          path: ~/.cabal
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
 
-    - name: Install dependencies
-      run: |
-        cabal update
-        cabal build --only-dependencies --enable-tests --enable-benchmarks
+      - name: Install dependencies
+        run: |
+          cabal update
+          cabal build --only-dependencies --enable-tests --enable-benchmarks
 
-    - name: Build
-      run: cabal build --enable-tests --enable-benchmarks all
+      - name: Build
+        run: cabal build --enable-tests --enable-benchmarks all
 
-    - name: Run tests
-      run: cabal test all
+      - name: Run tests
+        run: cabal test all
