--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -12,38 +12,35 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-
-      # Upgrade ghcup to the latest version to get the latest list of available GHC versions
-      - name: Upgrade ghcup
-        run: ghcup upgrade
-
-      # Use a valid GHC version available in GHCup
       - uses: actions/setup-haskell@v1
         with:
-          ghc-version: '9.4.3'  # Updated to a valid version
-          cabal-version: '3.0'
+          ghc-version: '8.10.3'  # Update to a more recent GHC version
+          cabal-version: '3.0'  # Update to a more recent Cabal version
 
+      - name: Create cabal.project file if needed
+        run: |
+          if [ ! -f cabal.project ]; then
+            echo "packages: *.cabal" > cabal.project
+          fi
       - name: Cache
         uses: actions/cache@v3
         env:
           cache-name: cache-cabal
         with:
           path: ~/.cabal
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/*.cabal') }}-${{ hashFiles('**/cabal.project') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('*.cabal') }}-${{ hashFiles('cabal.project') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-
       - name: Install dependencies
         run: |
           cabal update
           cabal build --only-dependencies --enable-tests --enable-benchmarks
-
       - name: Build
         run: cabal build --enable-tests --enable-benchmarks all
-
       - name: Run tests
         run: cabal test all
